<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gally Shuttle</string>
    <string name="logo_description">Gally Shuttle logo</string>
    <string name="main_fragment_title">Schedules</string>
    <string name="schedule_title_continuous">Continuous Schedule</string>
    <string name="schedule_title_alt_continuous">Alternative Continuous Schedule</string>
    <string name="schedule_title_late_night">Late Night Schedule</string>
    <string name="schedule_title_weekend">Weekend Schedule</string>
    <string name="schedule_title_modified">Modified Schedule</string>
    <string name="about_fragment_title">About</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="policies_fragment_title">Policies</string>

    <string name="loading">Loading…</string>

    <!-- ScheduleActivity strings -->
    <string name="no_ma_gallaudet_station_name">NoMa-Gallaudet U</string>
    <string name="union_station_name">Union Station</string>
    <string name="mssd_station_name">MSSD</string>
    <string name="kdes_station_name">KDES</string>
    <string name="benson_station_name">Benson Hall</string>
    <string name="kellogg_station_name">Kellogg</string>

    <array name="continuous_stations">
        <item>@string/no_ma_gallaudet_station_name</item>
        <item>@string/union_station_name</item>
        <item>@string/mssd_station_name</item>
        <item>@string/kdes_station_name</item>
        <item>@string/benson_station_name</item>
        <item>@string/kellogg_station_name</item>
    </array>
    <array name="alt_continuous_stations">
        <item>@string/no_ma_gallaudet_station_name</item>
        <item>@string/union_station_name</item>
        <item>@string/mssd_station_name</item>
        <item>@string/kdes_station_name</item>
        <item>@string/benson_station_name</item>
        <item>@string/kellogg_station_name</item>
    </array>
    <array name="late_night_stations">
        <item>@string/benson_station_name</item>
        <item>@string/kellogg_station_name</item>
        <item>@string/union_station_name</item>
    </array>
    <array name="modified_stations">
        <item>@string/benson_station_name</item>
        <item>@string/kellogg_station_name</item>
        <item>@string/union_station_name</item>
    </array>
    <array name="weekend_stations">
        <item>@string/benson_station_name</item>
        <item>@string/kellogg_station_name</item>
        <item>@string/no_ma_gallaudet_station_name</item>
        <item>@string/union_station_name</item>
    </array>

    <!-- MainFragment text -->
    <string name="intro_message">Choose a schedule to view:</string>
    <string name="continuous_schedule">Continuous Shuttle Schedule</string>
    <string name="late_night_schedule">Late Night Shuttle Schedule</string>
    <string name="weekend_schedule">Weekend Shuttle Schedule</string>
    <string name="modified_schedule">Modified Shuttle Schedule</string>

    <!-- Dialog messages -->
    <string name="no_connection_dialog_title">No connection!</string>
    <string name="no_connection_dialog_message">No Wi-Fi or data connection available.</string>
    <string name="error_dialog_title">Error!</string>
    <string name="error_dialog_message">There was a problem downloading data. Please try again.</string>

    <!-- Navigation Items text -->
    <string-array name="navigation_items">
        <item>Schedules</item>
        <item>Policies</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>


    <!-- AboutFragment text -->
    <string name="version">1.0.0</string>
    <string name="copyright">Copyright © 2014 Timothy Yu</string>
    <string name="underlined_credits"><u>Credits</u></string>
    <string name="underlined_rate_application"><u>Rate Application</u></string>
    <string name="underlined_support"><u>Support</u></string>
    <string name="underlined_open_source_licenses"><u>Open Source Licenses</u></string>
    <string name="underlined_terms_of_service"><u>Terms of Service</u></string>
    <string name="underlined_privacy_policy"><u>Privacy Policy</u></string>
    <string name="about_message">Gally Shuttle - Never miss a shuttle again!</string>

    <!-- AboutDialogFragment titles -->
    <string name="dialog_licenses_title">Open Source Licenses</string>
    <string name="dialog_credits_title">Credits</string>
    <string name="dialog_terms_of_service_title">Terms of Service</string>
    <string name="dialog_privacy_policy_title">Privacy Policy</string>
    <string name="title_activity_snooze">SnoozeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_schedule">ScheduleActivity</string>

</resources>
